# bevy-jam

./: Cargo.toml  LICENSE-APACHE  LICENSE-MIT  LICENSE.md  README.md
.github/workflows/: ci.yml
assets/cards/: catipular.card  liswhistle.card
src/: bootstrap.rs  config.rs  lib.rs  main.rs  state.rs  ui.rs
src/battle/: battle_tick.rs  components.rs  mod.rs  team.rs
src/battle/ui/: mod.rs
src/battle/ui/battle_stage/: mod.rs
src/battle/ui/opponent/: mod.rs
src/battle/ui/player/: deck.rs  hand.rs  info.rs  mod.rs
src/cards/: README.md  action.rs  actions.rs  attack.rs  card.rs  deck.rs  mod.rs  stats.rs  status.rs  turn.rs
src/cards/components/: attack.rs  mod.rs  stats.rs  status.rs  turn.rs
